--- a/templates/registro.html
+++ b/templates/registro.html
@@ -69,7 +69,7 @@
                     </div>
                     <div id="error-terminos"></div>
                     <!-- Guía para el usuario -->
-                    <a href="#">¿Necesitas ayuda?</a>
+                    <a href="https://help.netflix.com/legal/termsofuse" target="_blank">¿Necesitas ayuda?</a>
                 </div>
             </form>
         </div>
